Adjusts section title sizes and names to avoid line spillover

--- a/docs/assets/scss/theme/_docs.scss
+++ b/docs/assets/scss/theme/_docs.scss
@@ -16,16 +16,17 @@
 		}
 	}
 	.card-icon-holder {
-		width: 60px;
-		height: 60px;
+		width: 50px;
+		height: 50px;
 		font-size: 1.5rem;
-		padding-top: 1rem;
+		padding-top: .55rem;
 		display: inline-block;
 	}
 	.card-title-text {
 		display: inline-block;
 		position: relative;
-		top: -0.3rem;
+
+		font-size: 1.3rem;
 	}
 	.card-link-mask {
 		position: absolute;
